--- a/css/style.css
+++ b/css/style.css
@@ -311,17 +311,37 @@ header .container{
     width: 100%;
     height: 100%;
 }
-.welcome-swiper{
-    background: #34A1DB;
+.welcome-swiper > .container {
+    padding: 0;
 }
-.welcome-swiper .swiper-container{
-    padding: 65px 0 135px;
+
+.swiper-button-prev{
+    left: 73px;
+}
+.swiper-button-next{
+    right: 73px;
+}
+
+.swiper-slide-main {
+    padding-top: 65px;
+    padding-bottom: 257px;
+}
+.swiper-slide1,
+.swiper-slide3 {
+    background-color: #34A1DB;
+}
+.swiper-slide2,
+.swiper-slide4 {
+    background-color: #2d82af;
 }
 
 .slide__wrap {
     display: flex;
     justify-content: center;
+    /* min-height: 800px; */
+    /* padding-bottom: 200px; */
     max-width: 1130px;
+    /* padding-top: 100px; */
     margin: 0 auto;
 }
 .slide-img{
@@ -517,6 +537,7 @@ header .container{
 .news-item {
     display: flex;
     flex-direction: column;
+    height: auto;
     width: calc(100% - 790px - 30px);
     overflow: hidden;
     transition: .34s all;
@@ -539,8 +560,7 @@ header .container{
 }
 .news__row{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     margin: 0 -15px;
     flex-wrap: wrap;
 }
@@ -1338,12 +1358,6 @@ footer .container{
 }
 .article__wrap .article-txt:nth-child(2){
     margin-top: 40px;
-}
-.swiper-button-prev{
-    left: 0;
-}
-.swiper-button-next{
-    right: 0;
 }
 .article-txt h2{
     font-weight: bold;
@@ -2222,9 +2236,7 @@ section.tabs {
     max-width: 880px;
     margin: 40px 0;
 }
-#tabsContainer {
 
-}
 .tabs-nav ul {
     margin: 0;
     padding: 0;
@@ -2248,9 +2260,6 @@ section.tabs {
 }
 .tabs-nav li.active {
     border-bottom: 3px solid #84C552;
-}
-.tabs-nav li.active a {
-
 }
 .tabs-content {
     overflow: hidden;
@@ -2574,9 +2583,6 @@ section.tabs {
     .news__upper-row .news-item {
         width: calc(100% - 60% - 30px);
     }
-    .welcome-swiper .swiper-container {
-        padding: 60px 0;
-    }
     .second-slide__text p {
         font-size: 24px;
         line-height: 34px;
@@ -2851,6 +2857,10 @@ section.tabs {
 
 
 @media screen and (max-width: 768px){
+    .swiper-slide-main {
+        padding-top: 65px;
+        padding-bottom: 150px;
+    }
     .slide-text {
         width: calc(100% - 260px - 40px);
         padding-left: 40px;
@@ -3017,6 +3027,15 @@ section.tabs {
 }
 
 @media screen and (max-width: 639px) {
+    .swiper-button-prev{
+        top: 408px;
+        left: 43px;
+    }
+    .swiper-button-next{
+        top: 407px;
+        right: 43px;
+    }
+
     .slide-img {
         width: 260px;
         margin: 0 auto;
@@ -3034,10 +3053,6 @@ section.tabs {
         width: 100%;
         padding: 0;
         text-align: center;
-    }
-
-    .welcome-swiper .swiper-container {
-        padding: 30px 0 40px;
     }
 
     .slide-text p {
@@ -3443,6 +3458,14 @@ section.tabs {
 }
 
 @media screen and (max-width: 420px){
+    .swiper-button-prev{
+        top: 360px;
+        left: 33px;
+    }
+    .swiper-button-next{
+        top: 359px;
+        right: 33px;
+    }
     .slide-img {
         width: 200px;
         margin: 0 auto;
@@ -3563,9 +3586,7 @@ section.tabs {
     .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
         bottom: 20px;
     }
-    .welcome-swiper .swiper-container {
-        padding: 30px 0 60px;
-    }
+    
     .crumb{
         font-size: 13px;
     }
